[gd_scene load_steps=12 format=3 uid="uid://2oneleomh7xu"]

[ext_resource type="Script" uid="uid://cvjxma2ocxxbs" path="res://scripts/coffee_mode.gd" id="1_3isco"]
[ext_resource type="PackedScene" uid="uid://d1qpm3ys6gfcx" path="res://actors/coffee_bean.tscn" id="1_b8dvw"]
[ext_resource type="Script" uid="uid://vnpf86sgij0r" path="res://scripts/coffee_bean.gd" id="2_j8578"]
[ext_resource type="PackedScene" uid="uid://b6ib0vyldviqq" path="res://platforms/platform_coffee.tscn" id="3_j8578"]
[ext_resource type="Script" uid="uid://cqwv6lk6iyjw1" path="res://scripts/platform_cleaner_coffee_bean.gd" id="5_cq4jp"]
[ext_resource type="Script" uid="uid://b8cpl8qctl00a" path="res://scripts/platform_coffee.gd" id="5_lqfok"]
[ext_resource type="PackedScene" uid="uid://bnqbheiixm4sv" path="res://HUD/caffeine_hud.tscn" id="5_mc3dk"]
[ext_resource type="FontFile" uid="uid://dvq2o6ni8eccq" path="res://fonts/Kenney Pixel.ttf" id="6_8pu30"]
[ext_resource type="PackedScene" path="res://scenes/rang√©e engrenages.tscn" id="7_scrcr"]
[ext_resource type="Texture2D" uid="uid://mxyiybnmwgco" path="res://assets/extras/Background coffee machine 6.png" id="10_scrcr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cq4jp"]
size = Vector2(5978.3345, 545.00024)

[node name="coffee_mode" type="Node2D"]
script = ExtResource("1_3isco")

[node name="platform_container_coffee" type="Node2D" parent="."]

[node name="coffee_bean" parent="platform_container_coffee" groups=["player"] instance=ExtResource("1_b8dvw")]
position = Vector2(91, 60)
scale = Vector2(0.03, 0.03)
collision_mask = 6
script = ExtResource("2_j8578")

[node name="platform_coffee" parent="platform_container_coffee" instance=ExtResource("3_j8578")]
position = Vector2(90, 69)
scale = Vector2(0.99999994, 0.99999994)
collision_mask = 6
script = ExtResource("5_lqfok")

[node name="camera" type="Camera2D" parent="platform_container_coffee"]
position = Vector2(90, 160)
scale = Vector2(0.03, 0.03)
limit_left = 0
limit_top = 0
limit_right = 180
position_smoothing_enabled = true

[node name="CaffeineHUD" parent="platform_container_coffee/camera" instance=ExtResource("5_mc3dk")]

[node name="CanvasLayer" type="CanvasLayer" parent="platform_container_coffee/camera"]

[node name="score" type="Label" parent="platform_container_coffee/camera/CanvasLayer"]
texture_filter = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = 15.0
offset_right = 8.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/font = ExtResource("6_8pu30")
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="platform_container_coffee"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="platform_container_coffee/ParallaxBackground"]
motion_mirroring = Vector2(180, 320)

[node name="TextureRect" type="TextureRect" parent="platform_container_coffee/ParallaxBackground/ParallaxLayer"]
offset_right = 3479.9998
offset_bottom = 5299.9995
scale = Vector2(0.1, 0.1)
texture = ExtResource("10_scrcr")
stretch_mode = 1

[node name="platform_cleaner_coffee" type="Area2D" parent="."]
position = Vector2(90.00001, 119)
scale = Vector2(0.03, 0.03)
collision_layer = 0
collision_mask = 7
script = ExtResource("5_cq4jp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="platform_cleaner_coffee"]
position = Vector2(-22.500488, -5394.166)
scale = Vector2(0.99999976, 0.99999976)
shape = SubResource("RectangleShape2D_cq4jp")

[node name="Node2D" parent="platform_cleaner_coffee" instance=ExtResource("7_scrcr")]
position = Vector2(-2766.666, -6766.668)
scale = Vector2(30, 30)

[connection signal="delete_object" from="platform_container_coffee/platform_coffee" to="." method="_on_platform_coffee_delete_object"]
[connection signal="body_entered" from="platform_cleaner_coffee" to="." method="_on_platform_cleaner_coffee_body_entered"]
